--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,24 +7,23 @@
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-
     <div class="container">
-        <div class="">
-            <div class="panel-heading">
-                <h1>Recipes!!!</h1>
-            </div>
 
-            <table class="table table-hover">
-                <tr>
-                    <th>ID</th>
-                    <th>Description</th>
-                </tr>
-                <tr th:each="recipe : ${recipes}">
-                    <td th:text="${recipe.id}">2</td>
-                    <td th:text="${recipe.description}">Noodles</td>
-                </tr>
-            </table>
-        </div>
+        <h1>Recipes!!!</h1>
+
+        <table class="table table-striped">
+            <thead class="thead-dark">
+            <tr>
+                <th>ID</th>
+                <th>Description</th>
+            </tr>
+            </thead>
+            <tr th:each="recipe : ${recipes}">
+                <td th:text="${recipe.id}">2</td>
+                <td th:text="${recipe.description}">Noodles</td>
+            </tr>
+        </table>
+
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
